<resources>
    <string name="app_name">MyParish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyParish</string>
    <string name="nav_header_subtitle" translatable="false">v1.1.6</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mass</string>
    <string name="menu_gallery">Announcements</string>
    <string name="menu_magazine">Magazine</string>
    <string name="menu_map">Map</string>
    <string name="menu_others">Cemetery</string>
    <string name="menu_slideshow">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy">Privacy</string>

    <string name="updating">Updating the list of the parishes, please wait..</string>
    <string name="select_client">Select your parish from the list below</string>
    <string name="client">Parish</string>
    <string name="filter">Filter</string>
    <string name="share">Scan the code below using the other phone</string>
    <string-array name="share_options">
        <item>Google Play</item>
        <item>APK file</item>
    </string-array>
    <string name="googleplay_url" translatable="false">https://play.google.com/store/apps/details?id=github.wleap.myparish&amp;pcampaignid=app_share</string>
    <string name="apkfile_url" translatable="false">https://github.com/wojtekl/google-play/raw/main/myparish/MyParish/app/release/app-release.apk</string>
    <string name="see_more">See more</string>

    <string name="apps_url" translatable="false">https://play.google.com/store/apps/dev?id=5731012165048810814</string>

    <string name="privacy_policy_url" translatable="false">https://raw.githubusercontent.com/wojtekl/google-play/main/myparish/privacy-policy</string>

    <string name="magazine_url" translatable="false">https://htmlpreview.github.io/?https://github.com/wojtekl/google-play/blob/main/myparish/data/magazine.html</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="personal_header">Personal</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="updated_title">Last updated</string>
    <string name="refresh_title">Refresh</string>
    <string name="country_title">Country</string>
    <string name="client_title">Parish</string>

    <string name="ad_app_id" translatable="false">ca-app-pub-4377490341302105~4928953797</string>
    <string name="app_open_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/5570188811</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/9626072294</string>
</resources>
