<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sharp_list_alt_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/sharp_local_library_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_magazine"
            android:icon="@drawable/sharp_local_library_24"
            android:title="@string/menu_magazine" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/sharp_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/sharp_map_24"
            android:title="@string/menu_others" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/sharp_contact_page_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/sharp_qr_code_2_24"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/sharp_privacy_tip_24"
            android:title="@string/menu_privacy" />
    </group>
</menu>