<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="github.wleap.myparish.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="github.wleap.myparish.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_magazine"
        android:name="github.wleap.myparish.ui.magazine.MagazineFragment"
        android:label="@string/menu_magazine"
        tools:layout="@layout/fragment_magazine" />

    <fragment
        android:id="@+id/nav_map"
        android:name="github.wleap.myparish.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_others"
        android:name="github.wleap.myparish.ui.others.OthersFragment"
        android:label="@string/menu_others"
        tools:layout="@layout/fragment_others" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="github.wleap.myparish.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_share"
        android:name="github.wleap.myparish.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_privacy"
        android:name="github.wleap.myparish.ui.privacy.PrivacyFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_privacy" />
</navigation>