<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/sync_header">

        <EditTextPreference
            app:key="updated"
            app:title="@string/updated_title"
            app:useSimpleSummaryProvider="true"
            app:enabled="false" />

        <Preference
            app:key="refresh"
            app:title="@string/refresh_title"
            app:useSimpleSummaryProvider="true"
            app:enabled="true" />

        <!--<SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/personal_header">

        <ListPreference
            app:key="country"
            app:title="@string/country_title"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="client"
            app:title="@string/client_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>